# open-exchange-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  cortext.yaml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  CONTRIBUTING.md
examples/: property_details.py  property_values.py  rent_estimates.py  rental_comps.py
src/open_exchange/: __init__.py  _types.py  client.py  compat.py  contants.py  exceptions.py  rental_comps.py  resource.py  types.py  typing.py
src/open_exchange/resources/: __init__.py
src/open_exchange/resources/data/: data.py  property_details.py  property_values.py  rent_estimates.py  rental_comps.py
src/open_exchange/types/: models.py  types.py
src/open_exchange/types/data/: property_detail_create_params.py  property_details_fetch_params.py  property_details_response.py  property_value_create_params.py  property_values_fetch_params.py  property_values_response.py  rent_estimate_create_params.py  rent_estimates_fetch_params.py  rent_estimates_response.py  rental_comp_create_params.py  rental_comps_fetch_params.py  rental_comps_response.py
src/ox_data_api/: rental_comps.py
tests/open_exchange/: test_rental_comps.py
